<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--编辑框，用户输入信息-->
    <EditText
        android:id="@+id/edit_userinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/edit_hint"
        android:minLines="3"
        android:maxLines="5"
        >
        <requestFocus/>
    </EditText>


    <!--保存和读取的按钮，保存到external storage 的公共目录 PUBLIC_DOCUMENT-->
    <LinearLayout
        android:id="@+id/layout_external_public"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_write_public"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/write_to_external_public"
            />

        <Button
            android:id="@+id/btn_read_public"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/read_from_external_public"
            />

    </LinearLayout>

    <!--复制图片、删除图片-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >

        <Button
            android:id="@+id/btn_copy_photo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/copy_photo"
            />

        <Button
            android:id="@+id/btn_delete_photo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/delete_photo"
            />
    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operation_external_private"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        />
    <!--保存和读取的按钮，保存到external storage 的私有目录，仅针对当前的APP可见-->
    <LinearLayout
        android:id="@+id/layout_external_private"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_write_private"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/write_external_private"
            />

        <Button
            android:id="@+id/btn_read_private"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/read_external_private"
            />

    </LinearLayout>

</LinearLayout>